--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "pandas (>=2.3.2,<3.0.0)",
     "streamlit (>=1.49.1,<2.0.0)",
-    "sqlalchemy (>=2.0.43,<3.0.0)"
+    "sqlalchemy (>=2.0.43,<3.0.0)",
+    "beautifulsoup4 (>=4.13.5,<5.0.0)"
 ]
 
 [tool.poetry]
